# genai-stuff

./: .gitignore  .vercel  main.py  pyproject.toml  readme.md  requirements.txt
_1token_counter/: tokenize_tiktoken.py  tokenize_wordpiece.py
_2embeddings/: _contextual_embeddings.py  readme.md  requirements.txt
_3chat/: stream_chat.py
_4functions/: __init__.py  arxiv_retriever.py
_4tools_and_functions/: agent_with_tools.py  arxiv_paper_retriever.py
_chatmodels/: google_models.py
chat_models/: groq_models.py
token-counter/: main.py
token_counter/: readme.md  tokenize_tiktoken.py  tokenize_wordpiece.py
